[package]
name = "gen-ascii-art"
version = "0.1.0"
edition = "2021"
description = "Generate colorful or grayscale ASCII art from images and GIFs directly in your terminal."
authors = ["ss-sonic <shubham@routerprotocol.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ss-sonic/gen-ascii-art"
documentation = "https://docs.rs/gen-ascii-art"
readme = "README.md"
keywords = ["ascii-art", "image", "gif", "generator", "cli"]
categories = [
    "command-line-utilities",
    "multimedia::images",
    "multimedia::encoding",
]
exclude = ["example.gif"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { version = "0.25.1", features = [
    "gif",
    "png",
    "jpeg",
] } # Enabled gif feature and common formats
clap = { version = "4.5.4", features = [
    "derive",
] } # Added clap crate with derive feature
imageproc = "0.25.0" # Add imageproc for blurring
